[package]
name = "thmbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
get-cookies = { git = "https://github.com/ChrisPritchard/get-cookies-rs.git" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["macros"] }
