[package]
name = "thmbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["cargo"] }
get-cookies = { git = "https://github.com/ChrisPritchard/get-cookies-rs.git" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1